After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662074 - Critical message relating to EggSMClient
Critical message relating to EggSMClient
Status: RESOLVED FIXED
Product: vino
Classification: Applications
Component: Server
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Vino Maintainer(s)
Vino Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2011-10-18 08:18 UTC by Jens Georg
Modified: 2015-02-24 15:05 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jens Georg 2011-10-18 08:18:43 UTC
While checking my .xsession-errors for another issue, I came across

(vino-server:4666): EggSMClient-CRITICAL **: egg_sm_client_set_mode: assertion `global_client == NULL || global_client_mode == EGG_SM_CLIENT_MODE_DISABLED' failed

Vino seems to run though. 

 4666 ?        Sl     0:00 /usr/lib/vino/vino-server --sm-disable

This is on oneiric, version seems to be 3.2.0
Comment 1 David King 2015-02-24 15:05:48 UTC
Fixed on master and gnome-3-14 branches as 9fa956adc7af65be0828f68237e716bdc1edfad1 and 194344c9a0d26c43196156fe92ee9b71ec58af25. The fix should apply all the way back to 3.2.