Avoid a critical EggSMClient warning on startup

https://bugzilla.gnome.org/show_bug.cgi?id=662074